--- a/public/admin-panel.html
+++ b/public/admin-panel.html
@@ -1293,6 +1293,11 @@
             });
         });
 
+        // Open Create User Modal
+        window.openCreateUserModal = function() {
+            openModal('createUserModal');
+        };
+
         // Create User
         window.handleCreateUser = async function(e) {
             e.preventDefault();
