--- a/public/admin-panel.html
+++ b/public/admin-panel.html
@@ -778,18 +778,83 @@
 
         <!-- REQUESTS TAB -->
         <div id="requestsTab" class="tab-content">
+            <!-- Stats Grid -->
+            <div class="stats-grid">
+                <div class="stat-card">
+                    <div class="stat-header">
+                        <div class="stat-icon blue">
+                            <i class="fas fa-building"></i>
+                        </div>
+                    </div>
+                    <div class="stat-value" id="orgStatTotal">0</div>
+                    <div class="stat-label">Totale Richieste</div>
+                </div>
+                <div class="stat-card">
+                    <div class="stat-header">
+                        <div class="stat-icon orange">
+                            <i class="fas fa-clock"></i>
+                        </div>
+                    </div>
+                    <div class="stat-value" id="orgStatPending">0</div>
+                    <div class="stat-label">Da Contattare</div>
+                </div>
+                <div class="stat-card">
+                    <div class="stat-header">
+                        <div class="stat-icon green">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                    </div>
+                    <div class="stat-value" id="orgStatApproved">0</div>
+                    <div class="stat-label">Approvate</div>
+                </div>
+                <div class="stat-card">
+                    <div class="stat-header">
+                        <div class="stat-icon purple">
+                            <i class="fas fa-trophy"></i>
+                        </div>
+                    </div>
+                    <div class="stat-value" id="orgStatCompleted">0</div>
+                    <div class="stat-label">Completate</div>
+                </div>
+            </div>
+
+            <!-- Requests Card -->
             <div class="card">
                 <div class="card-header">
                     <h2 class="card-title">
-                        <i class="fas fa-building"></i> Richieste Aziende
+                        <i class="fas fa-building"></i> Richieste Aziende (<span id="countOrgRequests">0</span>)
                     </h2>
+                    <button class="btn btn-secondary btn-sm" onclick="loadOrgRequests()">
+                        <i class="fas fa-sync-alt"></i> Aggiorna
+                    </button>
                 </div>
-                <div class="empty-state">
-                    <div class="empty-icon">
-                        <i class="fas fa-inbox"></i>
-                    </div>
-                    <p>Sezione in sviluppo</p>
+
+                <!-- Filters -->
+                <div class="search-box">
+                    <i class="fas fa-search search-icon"></i>
+                    <input type="text" id="orgFilterSearch" placeholder="Cerca azienda, email, telefono..." onkeyup="applyOrgFilters()">
+                    <select id="orgFilterStatus" onchange="applyOrgFilters()" class="btn btn-secondary btn-sm">
+                        <option value="">Tutti gli stati</option>
+                        <option value="pending">⏳ Da Contattare</option>
+                        <option value="approved">✅ Approvate</option>
+                        <option value="completed">🎉 Completate</option>
+                        <option value="rejected">❌ Rifiutate</option>
+                    </select>
+                    <select id="orgFilterReferral" onchange="applyOrgFilters()" class="btn btn-secondary btn-sm">
+                        <option value="">Tutti</option>
+                        <option value="yes">Con Referral</option>
+                        <option value="no">Senza Referral</option>
+                    </select>
                 </div>
+
+                <!-- Loading -->
+                <div id="orgRequestsLoading" class="loading">
+                    <div class="spinner"></div>
+                    <p>Caricamento richieste...</p>
+                </div>
+
+                <!-- Requests List -->
+                <div id="orgRequestsList"></div>
             </div>
         </div>
 
@@ -1272,6 +1337,8 @@
             // Load data if needed
             if (tabName === 'users') {
                 loadUsers();
+            } else if (tabName === 'requests') {
+                loadOrgRequests();
             } else if (tabName === 'contracts') {
                 loadContracts();
             } else if (tabName === 'points') {
@@ -1432,6 +1499,231 @@
                 console.error('Error:', error);
                 alert('❌ Errore: ' + error.message);
             }
+        };
+
+        // ========================================
+        // ORGANIZATION REQUESTS FUNCTIONS
+        // ========================================
+
+        let allOrgRequests = [];
+
+        window.loadOrgRequests = async function() {
+            const loading = document.getElementById('orgRequestsLoading');
+            const container = document.getElementById('orgRequestsList');
+
+            try {
+                loading.style.display = 'block';
+                container.innerHTML = '';
+
+                const { data, error } = await supabase
+                    .from('organization_requests')
+                    .select('*')
+                    .order('created_at', { ascending: false });
+
+                if (error) throw error;
+
+                allOrgRequests = data || [];
+                updateOrgStats();
+                displayOrgRequests(allOrgRequests);
+                loading.style.display = 'none';
+            } catch (error) {
+                console.error('Error loading org requests:', error);
+                loading.innerHTML = '<div class="empty-state"><div class="empty-icon"><i class="fas fa-exclamation-triangle"></i></div><p>Errore caricamento richieste</p></div>';
+            }
+        };
+
+        function updateOrgStats() {
+            document.getElementById('orgStatTotal').textContent = allOrgRequests.length;
+            document.getElementById('orgStatPending').textContent = allOrgRequests.filter(r => r.status === 'pending').length;
+            document.getElementById('orgStatApproved').textContent = allOrgRequests.filter(r => r.status === 'approved').length;
+            document.getElementById('orgStatCompleted').textContent = allOrgRequests.filter(r => r.status === 'completed').length;
+        }
+
+        function displayOrgRequests(requests) {
+            const container = document.getElementById('orgRequestsList');
+            document.getElementById('countOrgRequests').textContent = requests.length;
+
+            if (!requests || requests.length === 0) {
+                container.innerHTML = '<div class="empty-state"><div class="empty-icon"><i class="fas fa-building"></i></div><p>Nessuna richiesta trovata</p></div>';
+                return;
+            }
+
+            container.innerHTML = requests.map(request => {
+                const hasReferral = request.referred_by_code;
+                const contactName = `${request.contact_first_name || ''} ${request.contact_last_name || ''}`.trim();
+                const statusColors = {
+                    pending: 'var(--warning)',
+                    approved: 'var(--secondary)',
+                    completed: 'var(--accent)',
+                    rejected: 'var(--danger)'
+                };
+                const statusLabels = {
+                    pending: '⏳ Da Contattare',
+                    approved: '✅ Approvata',
+                    completed: '🎉 Completata',
+                    rejected: '❌ Rifiutata'
+                };
+
+                return `
+                    <div class="card" style="border-left: 4px solid ${statusColors[request.status]}; margin-bottom: 1rem;">
+                        <div style="display: flex; justify-content: space-between; align-items: start; margin-bottom: 1rem;">
+                            <div>
+                                <h3 style="margin: 0 0 0.5rem 0;">🏢 ${request.organization_name}</h3>
+                                <p style="margin: 0; color: var(--gray-600); font-size: 0.875rem;">
+                                    👤 ${contactName} • 📧 ${request.contact_email} • 📞 ${request.contact_phone}
+                                </p>
+                                ${hasReferral ? `<p style="margin: 0.5rem 0 0 0; color: var(--accent); font-size: 0.875rem;">🎫 Referral: <strong>${request.referred_by_code}</strong></p>` : ''}
+                            </div>
+                            <span class="badge" style="background: ${statusColors[request.status]}; color: white; padding: 0.25rem 0.75rem; border-radius: 12px; font-size: 0.75rem;">
+                                ${statusLabels[request.status]}
+                            </span>
+                        </div>
+                        
+                        ${request.organization_type ? `<p style="margin: 0 0 0.5rem 0; color: var(--gray-600); font-size: 0.875rem;">🏷️ Tipo: ${request.organization_type}</p>` : ''}
+                        ${request.admin_notes ? `<div style="background: var(--gray-100); padding: 0.75rem; border-radius: 8px; margin: 0.75rem 0;"><strong>📝 Note:</strong> ${request.admin_notes}</div>` : ''}
+                        ${request.contract_code ? `<div style="background: var(--secondary); color: white; padding: 0.5rem 1rem; border-radius: 8px; margin: 0.75rem 0; display: inline-flex; align-items: center; gap: 0.5rem;"><i class="fas fa-file-contract"></i> Codice: <strong>${request.contract_code}</strong></div>` : ''}
+                        
+                        <div style="display: flex; gap: 0.75rem; margin-top: 1rem; flex-wrap: wrap;">
+                            ${request.status === 'pending' ? `
+                                <button class="btn btn-primary btn-sm" onclick="approveOrg('${request.id}')">
+                                    <i class="fas fa-check"></i> Approva
+                                </button>
+                                <button class="btn btn-danger btn-sm" onclick="rejectOrg('${request.id}')">
+                                    <i class="fas fa-times"></i> Rifiuta
+                                </button>
+                            ` : ''}
+                            ${request.status === 'approved' && !request.contract_code ? `
+                                <button class="btn btn-primary btn-sm" onclick="assignContractCode('${request.id}')">
+                                    <i class="fas fa-file-contract"></i> Assegna Codice
+                                </button>
+                            ` : ''}
+                            <button class="btn btn-secondary btn-sm" onclick="addOrgNote('${request.id}')">
+                                <i class="fas fa-sticky-note"></i> Note
+                            </button>
+                            <button class="btn btn-secondary btn-sm" onclick="emailOrg('${request.contact_email}', '${request.organization_name}')">
+                                <i class="fas fa-envelope"></i> Email
+                            </button>
+                        </div>
+                    </div>
+                `;
+            }).join('');
+        }
+
+        window.applyOrgFilters = function() {
+            const status = document.getElementById('orgFilterStatus').value;
+            const hasReferral = document.getElementById('orgFilterReferral').value;
+            const searchTerm = document.getElementById('orgFilterSearch').value.toLowerCase();
+
+            let filtered = allOrgRequests;
+
+            if (status) {
+                filtered = filtered.filter(r => r.status === status);
+            }
+
+            if (hasReferral === 'yes') {
+                filtered = filtered.filter(r => r.referred_by_code);
+            } else if (hasReferral === 'no') {
+                filtered = filtered.filter(r => !r.referred_by_code);
+            }
+
+            if (searchTerm) {
+                filtered = filtered.filter(r =>
+                    (r.organization_name && r.organization_name.toLowerCase().includes(searchTerm)) ||
+                    (r.contact_email && r.contact_email.toLowerCase().includes(searchTerm)) ||
+                    (r.contact_phone && r.contact_phone.toLowerCase().includes(searchTerm)) ||
+                    (r.contact_first_name && r.contact_first_name.toLowerCase().includes(searchTerm)) ||
+                    (r.contact_last_name && r.contact_last_name.toLowerCase().includes(searchTerm))
+                );
+            }
+
+            displayOrgRequests(filtered);
+        };
+
+        window.approveOrg = async function(requestId) {
+            if (!confirm('Approvare questa richiesta?')) return;
+
+            try {
+                const { error } = await supabase
+                    .from('organization_requests')
+                    .update({ status: 'approved', approved_at: new Date().toISOString() })
+                    .eq('id', requestId);
+
+                if (error) throw error;
+
+                alert('✅ Richiesta approvata!');
+                loadOrgRequests();
+            } catch (error) {
+                console.error('Error:', error);
+                alert('❌ Errore: ' + error.message);
+            }
+        };
+
+        window.rejectOrg = async function(requestId) {
+            if (!confirm('Rifiutare questa richiesta?')) return;
+
+            try {
+                const { error } = await supabase
+                    .from('organization_requests')
+                    .update({ status: 'rejected' })
+                    .eq('id', requestId);
+
+                if (error) throw error;
+
+                alert('✅ Richiesta rifiutata!');
+                loadOrgRequests();
+            } catch (error) {
+                console.error('Error:', error);
+                alert('❌ Errore: ' + error.message);
+            }
+        };
+
+        window.assignContractCode = async function(requestId) {
+            const code = prompt('Inserisci il codice contratto:');
+            if (!code) return;
+
+            try {
+                const { error } = await supabase
+                    .from('organization_requests')
+                    .update({ 
+                        contract_code: code.toUpperCase(),
+                        status: 'completed'
+                    })
+                    .eq('id', requestId);
+
+                if (error) throw error;
+
+                alert('✅ Codice contratto assegnato!');
+                loadOrgRequests();
+            } catch (error) {
+                console.error('Error:', error);
+                alert('❌ Errore: ' + error.message);
+            }
+        };
+
+        window.addOrgNote = async function(requestId) {
+            const note = prompt('Inserisci una nota:');
+            if (note === null) return;
+
+            try {
+                const { error } = await supabase
+                    .from('organization_requests')
+                    .update({ admin_notes: note })
+                    .eq('id', requestId);
+
+                if (error) throw error;
+
+                alert('✅ Nota salvata!');
+                loadOrgRequests();
+            } catch (error) {
+                console.error('Error:', error);
+                alert('❌ Errore: ' + error.message);
+            }
+        };
+
+        window.emailOrg = function(email, orgName) {
+            const subject = encodeURIComponent(`CDM86 - ${orgName}`);
+            const body = encodeURIComponent(`Gentile ${orgName},\n\n`);
+            window.location.href = `mailto:${email}?subject=${subject}&body=${body}`;
         };
 
         // Logout
