--- a/public/admin-panel.html
+++ b/public/admin-panel.html
@@ -1525,6 +1525,46 @@
         </div>
     </div>
 
+    <!-- Notification Modal -->
+    <div id="notificationModal" class="modal">
+        <div class="modal-content" style="max-width: 400px;">
+            <div class="modal-header">
+                <h3 id="notificationTitle">
+                    <i id="notificationIcon" class="fas fa-info-circle"></i> 
+                    <span id="notificationTitleText">Notifica</span>
+                </h3>
+                <button class="close-btn" onclick="closeModal('notificationModal')">&times;</button>
+            </div>
+            <div class="modal-body">
+                <p id="notificationMessage" style="margin: 0; font-size: 1rem;"></p>
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-primary" onclick="closeModal('notificationModal')">
+                    <i class="fas fa-check"></i> OK
+                </button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Delete Promotion Confirmation Modal -->
+    <div id="deletePromoModal" class="modal">
+        <div class="modal-content" style="max-width: 400px;">
+            <div class="modal-header">
+                <h3><i class="fas fa-exclamation-triangle" style="color: var(--danger);"></i> Elimina Promozione</h3>
+                <button class="close-btn" onclick="closeModal('deletePromoModal')">&times;</button>
+            </div>
+            <div class="modal-body">
+                <p style="margin: 0; font-size: 1rem;">Sei sicuro di voler eliminare questa promozione? Questa azione non può essere annullata.</p>
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-secondary" onclick="closeModal('deletePromoModal')">Annulla</button>
+                <button class="btn btn-danger" onclick="confirmDeletePromo()">
+                    <i class="fas fa-trash"></i> Elimina
+                </button>
+            </div>
+        </div>
+    </div>
+
     <!-- Supabase + JavaScript -->
     <script type="module">
         import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/+esm';
@@ -1696,6 +1736,30 @@
 
         window.closeModal = function(modalId) {
             document.getElementById(modalId).classList.remove('show');
+        };
+
+        // Notification Helper
+        window.showNotification = function(title, message, type = 'info') {
+            const iconMap = {
+                success: 'fa-check-circle',
+                error: 'fa-exclamation-triangle',
+                warning: 'fa-exclamation-circle',
+                info: 'fa-info-circle'
+            };
+            
+            const colorMap = {
+                success: 'var(--accent)',
+                error: 'var(--danger)',
+                warning: 'var(--warning)',
+                info: 'var(--primary)'
+            };
+
+            document.getElementById('notificationIcon').className = `fas ${iconMap[type]}`;
+            document.getElementById('notificationIcon').style.color = colorMap[type];
+            document.getElementById('notificationTitleText').textContent = title;
+            document.getElementById('notificationMessage').textContent = message;
+            
+            openModal('notificationModal');
         };
 
         // Close modal on overlay click
@@ -2558,16 +2622,26 @@
 
                 if (error) throw error;
 
-                alert(`✅ Promozione ${newStatus ? 'attivata' : 'disattivata'}!`);
+                showNotification(
+                    'Successo',
+                    `Promozione ${newStatus ? 'attivata' : 'disattivata'} con successo!`,
+                    'success'
+                );
                 loadPromotions();
             } catch (error) {
                 console.error('Error:', error);
-                alert('❌ Errore: ' + error.message);
+                showNotification('Errore', error.message, 'error');
             }
         };
 
-        window.deletePromo = async function(promoId) {
-            if (!confirm('Eliminare questa promozione?')) return;
+        window.deletePromo = function(promoId) {
+            window.pendingDeletePromoId = promoId;
+            openModal('deletePromoModal');
+        };
+
+        window.confirmDeletePromo = async function() {
+            const promoId = window.pendingDeletePromoId;
+            closeModal('deletePromoModal');
 
             try {
                 const { error } = await supabase
@@ -2577,16 +2651,20 @@
 
                 if (error) throw error;
 
-                alert('✅ Promozione eliminata!');
+                showNotification('Successo', 'Promozione eliminata con successo!', 'success');
                 loadPromotions();
             } catch (error) {
                 console.error('Error:', error);
-                alert('❌ Errore: ' + error.message);
+                showNotification('Errore', error.message, 'error');
             }
         };
 
         window.editPromo = function(promoId) {
-            alert('🚧 Funzione modifica in sviluppo. Per ora puoi eliminare e ricreare la promozione.');
+            showNotification(
+                'Funzione in sviluppo',
+                'La modifica delle promozioni sarà disponibile a breve. Per ora puoi eliminare e ricreare la promozione.',
+                'info'
+            );
         };
 
         // Logout
