🔧 FIX WRAPPER.MJS: Rimosso type=module e convertito login-modal.js in script globale

--- a/index.html
+++ b/index.html
@@ -1079,8 +1079,8 @@
         window.dispatchEvent(new Event('supabase-ready'));
     </script>
     
-    <!-- Login Modal System -->
-    <script type="module" src="assets/js/login-modal.js"></script>
+    <!-- Login Modal System (NO module type - plain script) -->
+    <script src="assets/js/login-modal.js"></script>
     
     <script>
         // Simple helper functions
