--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -907,7 +907,7 @@
                 console.log('🚀 Starting loadDashboardData...');
                 
                 // Get user data
-                const { data: userData, error: userError } = await supabase
+                const { data: userData, error: userError } = await window.supabaseClient
                     .from('users')
                     .select('*')
                     .eq('id', currentUser.id)
