🔧 FIX: Corretto initSupabase in admin-panel - window.supabase.createClient

--- a/public/admin-panel.html
+++ b/public/admin-panel.html
@@ -1571,14 +1571,13 @@
     <script>
         // Initialize Supabase
         function initSupabase() {
-            const { createClient } = supabase;
+            const { createClient } = window.supabase;
             const supabaseClient = createClient(
                 'https://uchrjlngfzfibcpdxtky.supabase.co',
                 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InVjaHJqbG5nZnpmaWJjcGR4dGt5Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjAwMzEyMDYsImV4cCI6MjA3NTYwNzIwNn0.64JK3OhYJi2YtrErctNAp_sCcSHwB656NVLdooyceOM'
             );
 
             window.supabaseClient = supabaseClient;
-            window.supabase = supabaseClient; // Keep backward compatibility
             console.log('✅ Admin Panel: Supabase initialized');
             window.dispatchEvent(new Event('supabase-ready'));
         }
