--- a/public/organization-dashboard.html
+++ b/public/organization-dashboard.html
@@ -453,7 +453,7 @@
                 const { data: orgData, error: orgError } = await supabase
                     .from('organizations')
                     .select('*')
-                    .eq('id', session.user.id)
+                    .eq('user_id', session.user.id)
                     .single();
                 
                 if (orgError || !orgData) {
