--- a/public/admin-panel.html
+++ b/public/admin-panel.html
@@ -1385,7 +1385,7 @@
                     </div>
                     <div class="form-group">
                         <label>Password *</label>
-                        <input type="password" id="newUserPassword" required minlength="6">
+                        <input type="password" id="newUserPassword" required minlength="6" autocomplete="new-password">
                     </div>
                     <div class="form-group">
                         <label>Nome</label>
@@ -3629,13 +3629,20 @@
             }
         };
 
-        // Initialize
-        (async () => {
+        // Initialize - Wait for Supabase to be ready
+        async function init() {
             const hasAccess = await checkAdminAccess();
             if (hasAccess) {
                 loadUsers();
             }
-        })();
+        }
+
+        // Wait for Supabase ready event
+        if (window.supabaseClient) {
+            init();
+        } else {
+            window.addEventListener('supabase-ready', init);
+        }
     </script>
 </body>
 </html>
