--- a/public/page-preview.html
+++ b/public/page-preview.html
@@ -117,7 +117,7 @@
                     <div style="max-width: 1200px; margin: 0 auto;">
                         <h2 style="text-align: center; font-size: 2.5rem; margin-bottom: 3rem; color: #2563eb; font-weight: 800;">${section.data.title}</h2>
                         <div style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 2rem;">
-                            ${section.data.cards.map(card => `
+                            ${(section.data.cards || []).map(card => `
                                 <div style="background: linear-gradient(135deg, #fbbf24, #f59e0b); padding: 2rem; border-radius: 1rem; text-align: center; color: #1e3a8a; box-shadow: 0 10px 30px rgba(251,191,36,0.3);">
                                     <i class="fas ${card.icon}" style="font-size: 2.5rem; margin-bottom: 1rem; display: block;"></i>
                                     <h3 style="font-size: 1.5rem; margin-bottom: 0.75rem; font-weight: 700;">${card.title}</h3>
@@ -131,7 +131,7 @@
                     <div style="max-width: 1200px; margin: 0 auto;">
                         <h2 style="text-align: center; font-size: 2.5rem; margin-bottom: 3rem; color: #2563eb; font-weight: 800;">${section.data.title}</h2>
                         <div style="display: grid; grid-template-columns: repeat(4, 1fr); gap: 1.5rem;">
-                            ${section.data.cards.map(card => `
+                            ${(section.data.cards || []).map(card => `
                                 <div style="background: #fff; border: 2px solid #e2e8f0; padding: 1.5rem; border-radius: 0.75rem; text-align: center; box-shadow: 0 4px 15px rgba(0,0,0,0.05);">
                                     <i class="fas ${card.icon}" style="font-size: 2rem; color: #fbbf24; margin-bottom: 1rem; display: block;"></i>
                                     <h4 style="font-size: 1.125rem; margin-bottom: 0.5rem; color: #1e293b; font-weight: 600;">${card.title}</h4>
@@ -144,7 +144,7 @@
                 stats: `
                     <div style="max-width: 1000px; margin: 0 auto;">
                         <div style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 2rem;">
-                            ${section.data.stats.map(stat => `
+                            ${(section.data.stats || []).map(stat => `
                                 <div style="text-align: center; padding: 2rem; background: rgba(37, 99, 235, 0.05); border-radius: 0.75rem; border: 1px solid rgba(37, 99, 235, 0.1);">
                                     <div style="font-size: 3rem; font-weight: 800; color: #fbbf24; margin-bottom: 0.5rem;">${stat.number}</div>
                                     <div style="font-size: 1.125rem; color: #475569; font-weight: 500;">${stat.label}</div>
