--- a/public/organization-dashboard.html
+++ b/public/organization-dashboard.html
@@ -738,27 +738,27 @@
                         '<span style="background: #10b981; color: white; padding: 4px 12px; border-radius: 12px; font-size: 0.85rem; font-weight: 600;">✓ Pubblicata</span>' :
                         '<span style="background: #f59e0b; color: white; padding: 4px 12px; border-radius: 12px; font-size: 0.85rem; font-weight: 600;">📝 Bozza</span>';
                     
-                    cardInfo.innerHTML = \`
+                    cardInfo.innerHTML = `
                         <div style="padding: 15px; background: #f8fafc; border-radius: 8px; border-left: 4px solid #667eea;">
                             <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 10px;">
-                                <strong style="color: #1e293b;">\${page.card_data.title}</strong>
-                                \${statusBadge}
+                                <strong style="color: #1e293b;">${page.card_data.title}</strong>
+                                ${statusBadge}
                             </div>
-                            \${page.card_published ? \`
+                            ${page.card_published ? `
                                 <p style="margin: 5px 0; color: #64748b; font-size: 0.9rem;">
                                     <i class="fas fa-check-circle" style="color: #10b981;"></i> 
                                     Visibile in <a href="/public/promotions.html" style="color: #667eea;">Promozioni</a>
                                 </p>
-                            \` : \`
+                            ` : `
                                 <p style="margin: 5px 0; color: #64748b; font-size: 0.9rem;">
                                     <i class="fas fa-info-circle" style="color: #f59e0b;"></i> 
                                     Card non ancora pubblicata
                                 </p>
-                            \`}
+                            `}
                         </div>
-                    \`;
+                    `;
                 } else {
-                    cardInfo.innerHTML = \`
+                    cardInfo.innerHTML = `
                         <div style="text-align: center; padding: 20px; background: #fef3c7; border-radius: 8px; border-left: 4px solid #f59e0b;">
                             <i class="fas fa-info-circle" style="font-size: 32px; color: #f59e0b; margin-bottom: 10px;"></i>
                             <p style="margin: 0; color: #92400e; font-weight: 600;">
@@ -768,13 +768,11 @@
                                 Crea la tua card per apparire nella pagina Promozioni
                             </p>
                         </div>
-                    \`;
+                    `;
                 }
             } catch (error) {
                 console.error('Error loading card status:', error);
             }
-        }
-            window.location.href = '/public/page-builder.html';
         }
         
         async function logout() {
