--- a/public/page-builder.html
+++ b/public/page-builder.html
@@ -1030,21 +1030,20 @@
                     if (error) throw error;
                     result = { success: true, page: data };
                 } else {
-                    // Create new page - generate slug
-                    const { data: slugData, error: slugError } = await supabaseClient
-                        .rpc('generate_organization_slug', { org_name: org.name });
-
-                    if (slugError) {
-                        console.error('Slug generation error:', slugError);
-                        throw new Error('Errore nella generazione dello slug');
-                    }
+                    // Create new page - generate slug client-side
+                    const slug = org.name
+                        .toLowerCase()
+                        .normalize('NFD')
+                        .replace(/[\u0300-\u036f]/g, '') // Remove accents
+                        .replace(/[^a-z0-9]+/g, '-')     // Replace non-alphanumeric with -
+                        .replace(/^-+|-+$/g, '');        // Remove leading/trailing -
 
                     // Insert new page
                     const { data, error } = await supabaseClient
                         .from('organization_pages')
                         .insert({
                             organization_id: org.id,
-                            slug: slugData,
+                            slug: slug,
                             page_data: {
                                 sections: sections,
                                 style: currentStyle
