fix: corretto link visualizza pagina e CTA card in promotions

--- a/public/organization-dashboard.html
+++ b/public/organization-dashboard.html
@@ -744,8 +744,8 @@
                                 </div>
                             </div>
                             <div style="display: flex; gap: 10px; margin-top: 15px; padding-top: 15px; border-top: 1px solid #e2e8f0;">
-                                <a href="/page/${page.slug}" target="_blank" class="action-btn" style="flex: 1; text-align: center; text-decoration: none; background: #667eea;">
-                                    <i class="fas fa-eye"></i> Visualizza Pagina
+                                <a href="/public/promotions.html" target="_blank" class="action-btn" style="flex: 1; text-align: center; text-decoration: none; background: #667eea;">
+                                    <i class="fas fa-eye"></i> Vedi in Promozioni
                                 </a>
                                 <button class="action-btn" style="flex: 1; background: #10b981;" onclick="openUnifiedWizard()">
                                     <i class="fas fa-edit"></i> Modifica Contenuto
