--- a/public/unified-content-wizard.html
+++ b/public/unified-content-wizard.html
@@ -703,6 +703,17 @@
                     </div>
                 </div>
             </div>
+
+            <!-- ANTEPRIMA LIVE -->
+            <div class="form-group" style="margin-top: 3rem;">
+                <label>🔍 Anteprima Live</label>
+                <div id="livePreview" style="background: #f8fafc; border: 2px solid #e2e8f0; border-radius: 1rem; padding: 2rem; min-height: 300px;">
+                    <div style="text-align: center; color: #94a3b8; padding: 3rem;">
+                        <i class="fas fa-eye" style="font-size: 3rem; margin-bottom: 1rem;"></i>
+                        <p>Seleziona un layout e una palette per vedere l'anteprima</p>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <!-- Step 5: Sezioni Pagina -->
@@ -1064,6 +1075,7 @@
             document.querySelectorAll('.layout-option').forEach(opt => {
                 opt.classList.toggle('selected', opt.dataset.layout === layout);
             });
+            updateLivePreview();
         }
 
         // Palette Selection
@@ -1072,6 +1084,75 @@
             document.querySelectorAll('.palette-option').forEach(opt => {
                 opt.classList.toggle('selected', opt.dataset.palette === palette);
             });
+            updateLivePreview();
+        }
+
+        // Color palettes definition
+        const colorPalettes = {
+            ocean: { primary: '#0ea5e9', secondary: '#06b6d4', accent: '#0891b2', bg: '#f0f9ff', text: '#0c4a6e' },
+            sunset: { primary: '#f97316', secondary: '#fb923c', accent: '#fdba74', bg: '#fff7ed', text: '#7c2d12' },
+            forest: { primary: '#10b981', secondary: '#34d399', accent: '#6ee7b7', bg: '#f0fdf4', text: '#064e3b' },
+            royal: { primary: '#8b5cf6', secondary: '#a78bfa', accent: '#c4b5fd', bg: '#faf5ff', text: '#581c87' },
+            mono: { primary: '#1e293b', secondary: '#475569', accent: '#64748b', bg: '#f8fafc', text: '#0f172a' }
+        };
+
+        // Update live preview
+        function updateLivePreview() {
+            const preview = document.getElementById('livePreview');
+            if (!wizardData.selectedLayout || !wizardData.selectedPalette) {
+                return;
+            }
+
+            const colors = colorPalettes[wizardData.selectedPalette];
+            const companyName = wizardData.companyName || 'La Tua Azienda';
+            const slogan = wizardData.slogan || 'Il tuo slogan apparirà qui';
+
+            let html = '';
+
+            if (wizardData.selectedLayout === 'modern') {
+                html = `
+                    <div style="background: linear-gradient(135deg, ${colors.primary} 0%, ${colors.secondary} 100%); padding: 3rem 2rem; border-radius: 1rem; color: white; position: relative; overflow: hidden;">
+                        <div style="position: relative; z-index: 1;">
+                            <div style="font-size: 0.875rem; text-transform: uppercase; letter-spacing: 2px; opacity: 0.9; margin-bottom: 0.5rem;">Anteprima Layout</div>
+                            <h2 style="font-size: 2.5rem; font-weight: 800; margin-bottom: 1rem;">${companyName}</h2>
+                            <p style="font-size: 1.25rem; opacity: 0.95; max-width: 600px;">${slogan}</p>
+                            <div style="margin-top: 2rem; display: flex; gap: 1rem;">
+                                <div style="background: rgba(255,255,255,0.2); padding: 0.75rem 1.5rem; border-radius: 0.5rem; backdrop-filter: blur(10px);">✨ Gradienti</div>
+                                <div style="background: rgba(255,255,255,0.2); padding: 0.75rem 1.5rem; border-radius: 0.5rem; backdrop-filter: blur(10px);">🎨 Animato</div>
+                            </div>
+                        </div>
+                        <div style="position: absolute; top: -50px; right: -50px; width: 200px; height: 200px; background: rgba(255,255,255,0.1); border-radius: 50%;"></div>
+                    </div>
+                `;
+            } else if (wizardData.selectedLayout === 'minimal') {
+                html = `
+                    <div style="background: white; padding: 3rem 2rem; border-radius: 1rem; border: 2px solid ${colors.primary};">
+                        <div style="max-width: 600px;">
+                            <div style="width: 60px; height: 4px; background: ${colors.primary}; margin-bottom: 2rem;"></div>
+                            <h2 style="font-size: 2rem; font-weight: 300; color: ${colors.text}; margin-bottom: 1rem; letter-spacing: -0.5px;">${companyName}</h2>
+                            <p style="font-size: 1.125rem; color: ${colors.secondary}; line-height: 1.8;">${slogan}</p>
+                            <div style="margin-top: 2rem; display: flex; gap: 2rem; color: ${colors.accent}; font-size: 0.875rem; text-transform: uppercase; letter-spacing: 1px;">
+                                <div>⬜ Clean</div>
+                                <div>⬜ Minimal</div>
+                            </div>
+                        </div>
+                    </div>
+                `;
+            } else if (wizardData.selectedLayout === 'bold') {
+                html = `
+                    <div style="background: ${colors.bg}; padding: 3rem 2rem; border-radius: 1rem; border-left: 8px solid ${colors.primary};">
+                        <div style="background: ${colors.primary}; color: white; display: inline-block; padding: 0.5rem 1rem; border-radius: 0.5rem; font-weight: 700; text-transform: uppercase; font-size: 0.75rem; margin-bottom: 1.5rem;">Bold Design</div>
+                        <h2 style="font-size: 3rem; font-weight: 900; color: ${colors.text}; margin-bottom: 1rem; line-height: 1.1;">${companyName}</h2>
+                        <p style="font-size: 1.5rem; color: ${colors.secondary}; font-weight: 600;">${slogan}</p>
+                        <div style="margin-top: 2rem; display: flex; gap: 1rem;">
+                            <div style="background: ${colors.primary}; color: white; padding: 1rem 1.5rem; border-radius: 0.5rem; font-weight: 700;">🔥 Audace</div>
+                            <div style="background: ${colors.secondary}; color: white; padding: 1rem 1.5rem; border-radius: 0.5rem; font-weight: 700;">⚡ Vivace</div>
+                        </div>
+                    </div>
+                `;
+            }
+
+            preview.innerHTML = html;
         }
 
         // Publish Content
