--- a/public/promotions.html
+++ b/public/promotions.html
@@ -732,7 +732,12 @@
                 if (loginBtn) {
                     loginBtn.innerHTML = '<i class="fas fa-user"></i><span>Accedi</span>';
                     loginBtn.onclick = () => {
-                        window.location.href = '/index.html';
+                        // Open auth modal instead of redirecting
+                        if (window.openAuthModal) {
+                            window.openAuthModal();
+                        } else {
+                            console.error('Auth modal not available');
+                        }
                     };
                 }
             }
@@ -756,7 +761,13 @@
             const loginBtn = document.getElementById('loginRequiredLogin');
             if (loginBtn) {
                 loginBtn.addEventListener('click', () => {
-                    window.location.href = '/index.html';
+                    hideLoginRequiredModal();
+                    // Open auth modal instead of redirecting
+                    if (window.openAuthModal) {
+                        window.openAuthModal();
+                    } else {
+                        console.error('Auth modal not available');
+                    }
                 });
             }
             
